ci: Add permissins to cicd.yml file

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Allows pushing to the gh-pages branch
+      pages: write     # Required for GitHub Pages (if using the pages action)
+      id-token: write  # Required for OIDC token (if using the pages action)
 
     steps:
       - name: Checkout code
